--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "@alpinejs/persist": "^3.7.1",
     "@ryangjchandler/fern": "^0.1.0",
     "alpinejs": "^3.9.0",
-    "bulma": "^0.9.3",
     "aos": "3.0.0-beta.6",
+    "bulma": "^0.9.3",
     "codemirror": "5.64.0",
     "feather-icons": "4.28.0",
+    "firebase": "^9.6.8",
     "ionicons": "6.0.0",
     "js-datepicker": "5.18.0",
     "notyf": "3.10.0",
